<resources>
    <string name="app_name">Github Repo Viewer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="networkError">Oops a network error occurred!!</string>
    <string name="noData">No Data at the moment sorry!!</string>

    <string name="repoName">Name: %1$s</string>
    <string name="licenseName">License: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="link">Link</string>
    <string name="issueCount">Open Issue count: %1$d</string>
    <string name="admin">Admin</string>
    <string name="pull">Pull</string>
    <string name="fetchingData">Fetching Data</string>
    <string name="push">Push</string>
    <string name="permissions">Permissions</string>
    <string name="na">NA</string>
    <string name="allDataFetched">All data fetched</string>
</resources>