<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/repoCardBackgroundColor"
    app:contentPadding="@dimen/repoCardPadding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            style="@style/NameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repoName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIssueCount"
            style="@style/SecondaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/issueCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/SecondaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin2"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIssueCount" />

        <TextView
            android:id="@+id/tvLicense"
            style="@style/LinkTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin2"
            android:text="@string/licenseName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
            android:id="@+id/tvPermission"
            style="@style/SecondaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:text="@string/permissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLicense" />

        <TextView
            android:id="@+id/tvAdminPerm"
            style="@style/PermissionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            app:layout_constraintEnd_toEndOf="@id/guideLine1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPermission" />

        <TextView
            android:id="@+id/tvPullPerm"
            style="@style/PermissionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pull"
            app:layout_constraintEnd_toEndOf="@id/guideLine2"
            app:layout_constraintStart_toStartOf="@id/guideLine1"
            app:layout_constraintTop_toBottomOf="@id/tvPermission" />

        <TextView
            android:id="@+id/tvPushPerm"
            style="@style/PermissionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/push"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideLine2"
            app:layout_constraintTop_toBottomOf="@id/tvPermission" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>